# mission_info_logger

./: CMakeLists.txt  README.md  package.xml
launch/: log_mission_info.launch
msg/: MissionInfo.msg
scripts/: missioninfo_pub.py  record_rosbag.sh
